// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IngredientsActionBar should match snapshot in edit mode 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center mt-6 space-x-4"
  >
    <button
      class="bg-green-500 text-white py-2 px-4 rounded-full"
    >
      Save
    </button>
  </div>
</DocumentFragment>
`;

exports[`IngredientsActionBar should match snapshot in view mode 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center mt-6 space-x-4"
  >
    <button
      class="bg-green-500 text-white py-2 px-4 rounded-full"
    >
      Edit ingredients
    </button>
    <button
      class="bg-yellow-500 text-white py-2 px-4 rounded-full"
    >
      Edit quantities
    </button>
  </div>
</DocumentFragment>
`;
